# poom-universe-map

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .prettierrc  README.md  pyproject.toml  requirements.txt
.copilot/: config.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  deploy.yml  test.yml
configs/: default.yaml
docs/: CHANGELOG.md  PROJECT_GOALS.md  PROJECT_PLAN.md  WORKFLOW.md
experiments/: demo.sh
prompts/: poom_prompt.md  pooxm_prompt.md
scripts/: format.sh  lint.sh  run.sh
src/poom/: cli.py  devices.py  initial_conditions.py  utils.py
src/pooxm/: __init__.py  cli.py  integrators.py  physics.py  render.py  utils.py
tests/: test_integrators.py  test_physics.py
